tests/baselines/reference/unusedLocalsOnFunctionDeclarationWithinFunctionDeclaration1.errors.txt
unusedLocalsOnFunctionDeclarationWithinFunctionDeclaration1.ts(1,18): error TS6133: 'person' is declared but its value is never read.
unusedLocalsOnFunctionDeclarationWithinFunctionDeclaration1.ts(1,34): error TS6133: 'person2' is declared but its value is never read.
unusedLocalsOnFunctionDeclarationWithinFunctionDeclaration1.ts(2,9): error TS6133: 'unused' is declared but its value is never read.
unusedLocalsOnFunctionDeclarationWithinFunctionDeclaration1.ts(3,14): error TS6133: 'maker' is declared but its value is never read.
unusedLocalsOnFunctionDeclarationWithinFunctionDeclaration1.ts(3,20): error TS6133: 'child' is declared but its value is never read.
unusedLocalsOnFunctionDeclarationWithinFunctionDeclaration1.ts(4,13): error TS6133: 'unused2' is declared but its value is never read.


==== unusedLocalsOnFunctionDeclarationWithinFunctionDeclaration1.ts (6 errors) ====
    function greeter(person: string, person2: string) {
                     ~~~~~~
!!! error TS6133: 'person' is declared but its value is never read.
                                     ~~~~~~~
!!! error TS6133: 'person2' is declared but its value is never read.
        var unused = 20;
            ~~~~~~
!!! error TS6133: 'unused' is declared but its value is never read.
        function maker(child: string): void {
                 ~~~~~
!!! error TS6133: 'maker' is declared but its value is never read.
                       ~~~~~
!!! error TS6133: 'child' is declared but its value is never read.
            var unused2 = 22;
                ~~~~~~~
!!! error TS6133: 'unused2' is declared but its value is never read.
        }
        person2 = "dummy value";
    }